featured post implementation

--- a/src/content/blog/04-markdown-syntax/index.mdx
+++ b/src/content/blog/04-markdown-syntax/index.mdx
@@ -2,8 +2,9 @@
 title: "Markdown syntax guide"
 description: "Get started writing content in Markdown."
 date: "2024-03-17"
-tag:
+tags:
   - reference
+category: "tips"
 ---
 
 import Callout from "@/components/Callout.astro";
