--- a/src/content/blog/05-mdx-syntax/index.mdx
+++ b/src/content/blog/05-mdx-syntax/index.mdx
@@ -4,6 +4,8 @@ description: "Use interactive components in Markdown."
 date: "2024-03-16"
 tags:
   - reference
+category: "tips"
+featured: true
 ---
 
 import Callout from "@/components/Callout.astro";
