--- a/src/content/blog/00-micro-changelog/index.mdx
+++ b/src/content/blog/00-micro-changelog/index.mdx
@@ -2,6 +2,8 @@
 title: "Everything new in Astro Micro"
 description: "Features, enhancements, and changes."
 date: "2024-05-09"
+category: "review"
+featured: true
 ---
 
 import Callout from "@/components/Callout.astro";
